welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: error: not found: value OUEST
    }else(getDirection()==OUEST){
                          ^SnakeBuggle:16: error: Unit does not take parameters
  pasDeSerpent()
              ^SnakeBuggle:17: error: Unit does not take parameters
  pasDeSerpent()
              ^