welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  def pasDeSerpent{
    while (!estFaceMur){
      avance()
    }
    if (getDirection()==Direction.EST){
      gauche()
      avance()
      gauche()
    }else(getDirection()==OUEST){
      droite()
      avance()
      droite()
    }  
  }
  pasDeSerpent()
  pasDeSerpent()
}